tests/integration/snapshots/integration__code_action__code_action_for_undefined_type_in_unopened_file.snap
---
source: tests/integration/code_action.rs
expression: redacted_response
---
[
  {
    "title": "Import `CommonType` from `schemas/common.fbs`",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 25
          },
          "end": {
            "line": 0,
            "character": 35
          }
        },
        "severity": 1,
        "code": "undefined-type",
        "message": "type referenced but not defined (check namespace): CommonType",
        "data": {
          "type_name": "CommonType"
        }
      }
    ],
    "edit": {
      "changes": {
        "[ROOT_URI]/api.fbs": [
          {
            "range": {
              "start": {
                "line": 0,
                "character": 0
              },
              "end": {
                "line": 0,
                "character": 0
              }
            },
            "newText": "include \"schemas/common.fbs\";\n\n"
          }
        ]
      }
    }
  }
]
