tests/integration/snapshots/integration__code_action__import_qualified_undefined_type.snap
---
source: tests/integration/code_action.rs
expression: redacted_response
---
[
  {
    "title": "Import `MyTable` from `definitions.fbs`",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 1,
            "character": 7
          },
          "end": {
            "line": 1,
            "character": 26
          }
        },
        "severity": 1,
        "code": "undefined-type",
        "message": "type referenced but not defined (check namespace): MyNamespace.MyTable",
        "data": {
          "type_name": "MyNamespace.MyTable"
        }
      }
    ],
    "edit": {
      "changes": {
        "[ROOT_URI]/schema.fbs": [
          {
            "range": {
              "start": {
                "line": 0,
                "character": 0
              },
              "end": {
                "line": 0,
                "character": 0
              }
            },
            "newText": "include \"definitions.fbs\";\n\n"
          }
        ]
      }
    }
  }
]
