tests/integration/snapshots/integration__code_action__import_undefined_type_already_included.snap
---
source: tests/integration/code_action.rs
expression: redacted_response
---
[
  {
    "title": "Qualify type as `MyNamespace.MyTable`",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 3,
            "character": 7
          },
          "end": {
            "line": 3,
            "character": 14
          }
        },
        "severity": 1,
        "code": "undefined-type",
        "message": "type referenced but not defined (check namespace): MyTable",
        "data": {
          "type_name": "MyTable"
        }
      }
    ],
    "edit": {
      "changes": {
        "[ROOT_URI]/schema.fbs": [
          {
            "range": {
              "start": {
                "line": 3,
                "character": 7
              },
              "end": {
                "line": 3,
                "character": 14
              }
            },
            "newText": "MyNamespace.MyTable"
          }
        ]
      }
    }
  },
  {
    "title": "Set file namespace to `MyNamespace`",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 3,
            "character": 7
          },
          "end": {
            "line": 3,
            "character": 14
          }
        },
        "severity": 1,
        "code": "undefined-type",
        "message": "type referenced but not defined (check namespace): MyTable",
        "data": {
          "type_name": "MyTable"
        }
      }
    ],
    "edit": {
      "changes": {
        "[ROOT_URI]/schema.fbs": [
          {
            "range": {
              "start": {
                "line": 1,
                "character": 0
              },
              "end": {
                "line": 1,
                "character": 0
              }
            },
            "newText": "\nnamespace MyNamespace;\n"
          }
        ]
      }
    }
  }
]
