tests/integration/snapshots/integration__code_action__import_undefined_type_with_existing_namespace.snap
---
source: tests/integration/code_action.rs
expression: redacted_response
---
[
  {
    "title": "Qualify type as `MyNamespace.MyTable` and import from `definitions.fbs`",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 3,
            "character": 7
          },
          "end": {
            "line": 3,
            "character": 14
          }
        },
        "severity": 1,
        "code": "undefined-type",
        "message": "type referenced but not defined (check namespace): MyTable",
        "data": {
          "type_name": "MyTable"
        }
      }
    ],
    "edit": {
      "changes": {
        "[ROOT_URI]/schema.fbs": [
          {
            "range": {
              "start": {
                "line": 0,
                "character": 0
              },
              "end": {
                "line": 0,
                "character": 0
              }
            },
            "newText": "include \"definitions.fbs\";\n\n"
          },
          {
            "range": {
              "start": {
                "line": 3,
                "character": 7
              },
              "end": {
                "line": 3,
                "character": 14
              }
            },
            "newText": "MyNamespace.MyTable"
          }
        ]
      }
    }
  }
]
