tests/integration/snapshots/integration__code_action__missing_semicolon_include_quickfix.snap
---
source: tests/integration/code_action.rs
expression: redacted_response
---
[
  {
    "title": "Add missing `;`",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 1,
            "character": 20
          },
          "end": {
            "line": 1,
            "character": 21
          }
        },
        "severity": 1,
        "code": "expecting-token",
        "message": "expected `;`, found `include`",
        "relatedInformation": [
          {
            "location": {
              "uri": "[ROOT_URI]/schema.fbs",
              "range": {
                "start": {
                  "line": 2,
                  "character": 0
                },
                "end": {
                  "line": 2,
                  "character": 7
                }
              }
            },
            "message": "unexpected token"
          },
          {
            "location": {
              "uri": "[ROOT_URI]/schema.fbs",
              "range": {
                "start": {
                  "line": 1,
                  "character": 20
                },
                "end": {
                  "line": 1,
                  "character": 21
                }
              }
            },
            "message": "add `;` here"
          }
        ],
        "data": {
          "eol": true,
          "expected": ";"
        }
      }
    ],
    "edit": {
      "changes": {
        "[ROOT_URI]/schema.fbs": [
          {
            "range": {
              "start": {
                "line": 1,
                "character": 21
              },
              "end": {
                "line": 1,
                "character": 21
              }
            },
            "newText": ";"
          }
        ]
      }
    }
  }
]
