tests/integration/snapshots/integration__code_action__no_code_action_for_other_diagnostics.snap
---
source: tests/integration/code_action.rs
expression: "serde_json::to_string_pretty(&actions).unwrap()"
---
[]
