tests/integration/snapshots/integration__code_action__remove_unused_include.snap
---
source: tests/integration/code_action.rs
expression: redacted_response
---
[
  {
    "title": "Remove unused include",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 1,
            "character": 0
          },
          "end": {
            "line": 1,
            "character": 39
          }
        },
        "severity": 4,
        "message": "unused include: other.fbs",
        "tags": [
          1
        ]
      }
    ],
    "edit": {
      "changes": {
        "[ROOT_URI]/schema.fbs": [
          {
            "range": {
              "start": {
                "line": 1,
                "character": 0
              },
              "end": {
                "line": 2,
                "character": 0
              }
            },
            "newText": ""
          }
        ]
      }
    }
  }
]
